Fixing small devices animation scrollbar error

--- a/global.css
+++ b/global.css
@@ -48,6 +48,8 @@ html, body {
     height: 100vh;
     background-color: #131313;
     color: #fff;
+    /* position: relative;
+    overflow: hidden; */
 }
 
 .animated-title span {
